src/objects/Partner_Page_Template__c.object
<CustomObject>
    <description>Landing Page templates</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Numbers__c</fullName>
        <label>Contract Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Content__c</fullName>
        <label>Disclaimer Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logo_Tagline__c</fullName>
        <label>Logo Tagline</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Content__c</fullName>
        <description>Default Marketing Content for a Template</description>
        <label>Marketing Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Headline__c</fullName>
        <label>Page Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal__c</fullName>
        <label>Portal</label>
        <picklist>
            <picklistValues>
                <fullName>Landing Page Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal Site</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Disclaimer__c</fullName>
        <label>Program Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Disclaimer__c</fullName>
        <label>Promo Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Text__c</fullName>
        <label>Promo Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualForce_Page__c</fullName>
        <description>Name of VisualForce Page (IT Setting)</description>
        <label>VisualForce Page</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Landing Page Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VisualForce_Page__c</columns>
        <columns>Active__c</columns>
        <columns>Portal__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Page_Headline__c</columns>
        <columns>Promo_Text__c</columns>
        <columns>Marketing_Content__c</columns>
        <columns>Logo_Tagline__c</columns>
        <columns>Promo_Disclaimer__c</columns>
        <columns>Disclaimer_Content__c</columns>
        <columns>Program_Disclaimer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Landing_Page_Site</fullName>
        <columns>NAME</columns>
        <columns>Portal__c</columns>
        <columns>Active__c</columns>
        <columns>VisualForce_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portal__c</field>
            <operation>equals</operation>
            <value>Landing Page Site</value>
        </filters>
        <label>Landing Page Site</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner_Portal_Site</fullName>
        <columns>NAME</columns>
        <columns>Portal__c</columns>
        <columns>Active__c</columns>
        <columns>VisualForce_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portal__c</field>
            <operation>equals</operation>
            <value>Partner Portal Site</value>
        </filters>
        <label>Partner Portal Site</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Landing Page Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>